fix: footer on mobile view; fix: html, body max-width

--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,7 @@
   --tags-font-size: 0.6rem;
 }
 
-html, body{height: 100vh;width: 100vw;}
+html, body{height: 100vh;max-width: 100vw;}
 body{
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: var(--document-font-size);
@@ -49,9 +49,9 @@ body{
 }
 
 footer{
+  display: flex;
   font-size: var(--footer-font-size);
   color: var(--footer-font-color);
-  display: flex;
   gap: 4px;
   justify-content: center;
   align-items: center;
@@ -354,6 +354,11 @@ footer img{
     padding: 0;
     border: 0;
   }
+  footer{
+    padding-bottom: 4px; 
+    background-color: var(--dark-background);
+  }
+
   .markdown img{ max-width: 80%;}
   .toc, .gutter, .tags{display: none;}
 }
